<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_panic"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_panic"/>

    <item
            android:id="@+id/navigation_information"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_information"/>

    <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_settings"/>

    <item
            android:id="@+id/navigation_recording"
            android:icon="@drawable/style_circular_button_small"
            android:title="Grabación"/>

</menu>
