<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             tools:context=".SettingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_settings"
            android:textSize="24sp"/>

    <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/login_display"
            android:textSize="20sp"/>
    <TextView
            android:text="@string/label_send_to_numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/label_send_numbers_display"
            android:textSize="20sp"/>

    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/recyclerview_phonenumbers"/>

    <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_numbers"
            android:textSize="20sp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/label_type_number"
            android:ems="10"
            android:id="@+id/type_number_editText"
            android:imeOptions="actionDone"/>
    <Button
            android:text="@string/label_add_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_number_button"/>


</LinearLayout>